mongodb/k8s/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb-service
  namespace: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: mongodb
  selector:
    app: mongodb
