mongodb/k8s/deploy/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mongodb-gateway
  namespace: mongodb
spec:
  gatewayClassName: traefik
  listeners:
    - name: mongodb
      protocol: TCP
      port: 27017
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mongodb-tcp
  namespace: mongodb
spec:
  parentRefs:
    - name: mongodb-gateway
      sectionName: mongodb
      kind: Gateway
  rules:
     - backendRefs:
        - name: mongodb-service
          namespace: mongodb
          port: 27017
